--- a/css/style.css
+++ b/css/style.css
@@ -162,3 +162,48 @@ h2,p{
     position: relative;
     opacity: 0.5;
 }
+/* Contact */
+.input-all{
+    position: relative;
+}
+input::placeholder{
+    font-family: var(--font2);
+    font-weight: bold;
+}
+.input{
+    padding: 10px;
+    border: none;
+    font: inherit;
+    color: #fff;
+    background-color: transparent;
+    outline: 2px solid #000;
+}
+.input-label{
+    position: absolute;
+    top: 0;
+    left: .9rem;
+    transform: translate(10px, 6px);
+    transition: transform .25s;
+    font-weight: bold;
+    font-family: var(--font2);
+    opacity: .5;
+}
+.input:focus+.input-label,
+.input:valid+.input-label{
+    transform: translate(10px, -30px) scale(.8);
+    color: #d1c5fc;
+    padding-inline: 20px;
+    margin-top: 10px;
+    background-color: #3e8595;
+    font-size: 1.3rem;
+    font-weight: bold;
+    outline-color: #000;
+    border-radius: 1rem;
+    opacity: 1;
+}
+textarea::placeholder{
+    padding-left: .4rem;
+    font-weight: bold;
+    opacity: .7;
+    font-family: var(--font2);
+}
