--- a/css/style.css
+++ b/css/style.css
@@ -76,8 +76,7 @@ p {
     height: 47vh;
     object-fit: cover;
     background-position: center center;
-    /*     border-bottom-left-radius: 3rem;
-    border-bottom-right-radius: 3rem; */
+
 }
 
 .bg-page {
@@ -253,7 +252,9 @@ textarea::placeholder {
 table {
     width: 100%;
 }
-
+caption{
+    color: #000!important;
+}
 table,
 th,
 td {
